# solo-leveling-system

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  cli.py  demo.py  ecosystem.config.json  requirements.txt
clients/desktop/: index.html  package-lock.json  package.json  vite.config.ts
clients/desktop/src/: App.tsx  index.css  theme.ts  types.ts
clients/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
clients/desktop/src-tauri/.cargo/: config.toml
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/resources/ffmpeg/: README.md
clients/desktop/src-tauri/src/: api.rs  bili_download.rs  db.rs  ffmpeg.rs  fish_tts.rs  focus_lock.rs  gpu_pref.rs  lib.rs  manictime.rs  ocr.rs  perception.rs  perception_macos.rs  perception_windows.rs  qwen_asr.rs  qwen_video.rs  sync_discovery.rs  sync_engine.rs  transcribe_queue.rs
clients/desktop/src/components/: ActivityTagPalette.tsx  ActivityToast.tsx  AnchorFieldMap.tsx  AnchorTextRenderer.tsx  AppHoverPanel.tsx  BiliHistoryDialog.tsx  BiliJobsWidget.tsx  BiliTranscribePanel.tsx  BiliVideoPanel.tsx  CameraWindow.tsx  CardHoverEffect.tsx  ChatPanel.tsx  CloseConfirmModal.tsx  ConfirmDialog.tsx  DatePickerPopover.tsx  DayNightChart.tsx  DebugRequestModal.tsx  FairyHUD.tsx  FairyWindow.tsx  FocusPanel.tsx  HudSelect.tsx  HudVideoPlayer.tsx  ModelDialog.tsx  ModelUsageBadge.tsx  MotivationDashboard.tsx  PlanNodePalette.tsx  PrepOverlay.tsx  ProtocolDemoPanel.tsx  SessionPicker.tsx  SettingsPanel.tsx  SpanDetailPanel.tsx  SyncPeerDialog.tsx  TodoListPanel.tsx  Tooltip.tsx  TorrentFieldDemoPanel.tsx  TorrentFieldPanel.tsx  TranscribeIdleAnimation.tsx  TranscribePrepOverlay.tsx  TranscriptPlayerWindow.tsx  ViewSwitcher.tsx
clients/desktop/src/lib/: anchor-embedding.ts  anchor-extract.ts  anchor-label-layout.ts  anchor-map-layout.ts  anchor-taxonomy.ts  anchor-to-context.ts  bili-transcript.ts  local-api.ts  model-audit.ts  model-display.ts  ocr-stitch.ts  segment-locate.ts  thought-distill.ts
clients/desktop/tools/panic-resolve/: Cargo.toml
clients/extension/: .gitignore  background.js  blocked.html  content.js  manifest.json  matcher.js
clients/mac_old/SoloAgent/: Package.swift
clients/mac_old/SoloAgent/SoloAgent.xcodeproj/: project.pbxproj
clients/macos/SoloAgent/: project.yml
clients/macos/SoloAgent/Resources/: Info.plist  SoloAgent.entitlements
clients/macos/SoloAgent/SoloAgent.xcodeproj/: project.pbxproj
clients/mobile/: .gitignore  App.tsx  CHANGELOG.next.md  VERSION  app.json  package-lock.json  package.json  release.command  sls.properties.example  solevup.properties.example  tsconfig.json
clients/mobile/android/: settings.gradle
clients/mobile/android/app/: build.gradle
clients/mobile/dev-tools/: wechat-formal-replay.mjs  wechat-replay.mjs
clients/mobile/dev-tools/icon-preview/: gen.py
clients/mobile/dev-tools/sls-card-dashboard/: README.md  index.html  manifest.json
clients/mobile/dev-tools/sls-live-mirror/: .gitignore  README.md  dev.mjs  mirror-server.mjs  (+3 more)
clients/mobile/ios/: Podfile
clients/mobile/src/: theme.ts  types.ts
clients/web/src/: App.tsx  theme.ts  types.ts
clients/win/: package-lock.json  package.json  vite.config.ts
clients/win/src/: App.tsx  index.css  main.tsx  mockData.ts  theme.ts  types.ts
clients/win/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/win/src-tauri/.cargo/: config.toml
clients/win/src-tauri/capabilities/: default.json
clients/win/src-tauri/src/: api.rs  bili_download.rs  db.rs  ffmpeg.rs  fish_tts.rs  gpu_pref.rs  hotkey.rs  lib.rs  manictime.rs  qwen_asr.rs  qwen_omni.rs  qwen_video.rs
config/: default.yaml
config/quests/: daily.yaml
data/: system.db
docs/: DESIGN.md  PROMPT-ENGINEERING.md  ROADMAP.md  antigravity-ui-builder-prompt.md  day-night-chart-design.md  manictime-db-schema.jfif  product-vision.md  ★★想法星图★★.canvas  主界面编排方案_多面板系统桌面.md  产品愿景.md  产品考古索引.md  参考.md  商业模式.md  当前项目CLAUDE.md  提示词中文.md  星光OPC入驻申请_企业简介与项目情况.md  星光OPC入驻申请_团队情况介绍.md  核心交互方案_系统主控舱.md  第1章_产品愿景.md  第2章_商业模式.md  第3章_系统面板设计.md  第4章_今日协议AI驱动.md
docs/98借鉴对象/: PROMPT-ENGINEERING.md
docs/98借鉴对象/EverMind_EverOS_EverMe/: EverMind探索存档_2026-05-20.md
docs/98借鉴对象/参考软件设计——人升/: README.md  convert_wiki.py
docs/99废弃文档/: 旧SYSTEM面板原型.md
docs/99废弃文档/AI草案/: 下一阶段蓝图_动机昼夜表经济闭环.md  日内相位引擎_草案.md  相位标签体系_草案.md
docs/99废弃文档/动机仪表盘_设计资料/: 资料1_思绪场.html
docs/99废弃文档/早期ClaudeCode原型/: 12月2日任务.md  12月2日工作日志.md  Buff库.md  主线任务.md  产品构想.md  今日任务.md  早期ClaudeCode原型CLAUDE.md  早期ClaudeCode原型归档.md  本周日程.md  消费清单.md  玩家状态.md  系统架构设计.md  系统设计v3-动机可视化.md  系统设计哲学.md  系统设计哲学v2.md  警示语.md
docs/AI系统/: 主动询问与窗口记忆.md  暗影君王智能体.md  管制与惩罚.md  视觉回溯智能体.md  训练系统.md
docs/superpowers/specs/: 2026-04-13-daynightchart-responsive-design.md
docs/星光OPC入驻申请/: 团队情况介绍.md  项目计划书.md
docs/昼夜表/: README.md  布局与交互.md  数据架构.md  视觉风格.md
docs/面向未来升级/: 动机系统.md  战略Buff库.md
protocol/: agent-protocol.md
protocol/schemas/: device.json  notification.json  report.json
scripts/: migrate_app_monitor_db.py  release_mobile.py
scripts/dominant-color-test/: dominant_color.py  dominant_color_report.html
server/: __init__.py
server/api/: __init__.py  agent_api.py  server.py
server/cognition/: __init__.py  analyzer.py
server/core/: __init__.py  __main__.py  events.py  system.py
server/perception/: __init__.py  device_manager.py  openclaw_bridge.py
server/storage/: __init__.py  database.py
server/system/: __init__.py  exp_engine.py  hidden_quests.py  messages.py  quest_engine.py  shadow_army.py  shop.py
server/ui/web/: index.html
src/: __init__.py
src/api/: __init__.py  server.py
src/cognition/: __init__.py  analyzer.py  motive_engine.py  pattern_detector.py
src/core/: __init__.py  __main__.py  config.py  events.py  player.py  system.py
src/perception/: __init__.py  screen_capture.py  window_detector.py
src/storage/: __init__.py  database.py  models.py
src/system/: __init__.py  achievement.py  buff_engine.py  notification.py  penalty.py  report.py  skills.py
src/ui/web/: index.html
(+325 files in other folders)
