[package]
name = "solo-leveling-system"
version = "0.1.3"
description = "Solo Leveling System — Desktop Client"
authors = ["MatthewHA233"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

# WebSocket
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "process", "fs"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = "0.3"
rmp-serde = "1.3"
base64 = "0.22"

# Local Database & HTTP Server
rusqlite = { version = "0.33", features = ["bundled"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }   # ReaderStream，给视频流端点用
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }

# macOS 私有 API（透明 Fairy 窗口等）— 只在 macOS 启用 tauri 特性
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }

# Windows 全局热键钩子 + 注册表读写（图形偏好）
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
winreg = "0.55"
