[package]
name = "solevup"
version = "0.1.3"
description = "Solevup — Desktop Client"
authors = ["MatthewHA233"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# 显式 binary 名称：默认会沿用 package name（solevup → solevup.exe），
# 改成大写 S 让最终产物是 Solevup.exe，跟 tauri.conf.json 的 productName "Solevup" 一致
[[bin]]
name = "Solevup"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"

# WebSocket
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "process", "fs"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = "0.3"
rmp-serde = "1.3"
base64 = "0.22"

# Local Database & HTTP Server
rusqlite = { version = "0.33", features = ["bundled"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }   # ReaderStream，给视频流端点用
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
backtrace = "0.3"

# macOS 私有 API（透明 Fairy 窗口等）— 只在 macOS 启用 tauri 特性
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }

# Windows 全局热键钩子 + 注册表读写（图形偏好）
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
winreg = "0.55"

# ── Profile：dev 模式关 debug-assertions 防上游 race 把我们崩掉 ──
# 上游 Tauri/wry 有一条 Rc<tao::EventLoopRunner> 在 WebView2 的
# WebResourceRequested custom_protocol_handler 里非主线程 clone 的 race
# （详见 tauri issue #15408，截至 2026-05-18 未修）。
# release 模式因为不开 stdlib UB checks 所以无声穿过；dev 模式 stdlib 的
# `hint::assert_unchecked(strong != 0)` 命中后 panic_nounwind_fmt 直接
# abort（catch_unwind 救不了），导致频繁闪退。
# 本仓自己的高频触发路径（ApiState::clone → AppHandle::clone）已通过
# 把 app_handle 改成 Arc<AppHandle> 拆掉了，但 wry 这条路径还在，
# 暂留这个 override 防回归。等上游修了删掉本段。
# overflow-checks 保持默认（dev 启用），跟 Tauri race 无关，关它纯亏。
[profile.dev]
debug-assertions = false
